<resources>
    <string name="app_name">hotel_app_1</string>
    <string name="home_title">  Hotel App  :-)</string>
    <string name="open_door">Open the door</string>
    <string name="wifi_pass">Get Wifi Password</string>
    <string name="call_waiter">Call Waiter</string>
    <string name="door_cam">Look who\'s at the door</string>
    <string name="food">Order Food</string>
    <string name="bill">Get the Bill</string>
</resources>
